Prepare backend for deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon --watch src/ --ext ts --exec ts-node --transpile-only src/index.ts",
     "build": "tsc",
+    "postbuild": "node dist/db/init.js",
     "init-db": "ts-node src/db/init.ts"
   },
   "keywords": [],
