--- a/backend/package.json
+++ b/backend/package.json
@@ -14,16 +14,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^11.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "pg": "^8.11.3",
     "@types/node": "^20.11.18",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2"
   }
